--- a/Article.html
+++ b/Article.html
@@ -86,7 +86,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2024). Station metadata integration of regional seismic networks in the southern Korean Peninsula. <i>Journal of the Geological Society of Korea</i>, <b>60</b>(1). <a href="http://dx.doi.org/doi:10.14770/jgsk.2024.001" target="_blank">doi:10.14770/jgsk.2024.001</a> (in Korean with English abstract) (in press)  
+                                            <li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2024). Station metadata integration of regional seismic networks in the southern Korean Peninsula. <i>Journal of the Geological Society of Korea</i>, <b>60</b>(1). <a href="http://dx.doi.org/doi:10.14770/jgsk.2024.001" target="_blank">doi:10.14770/jgsk.2024.001</a> (in Korean with English abstract) 
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
