--- a/SeismicNetwork.html
+++ b/SeismicNetwork.html
@@ -94,8 +94,8 @@
 
 						- <a href="https://github.com/ByeongSeokAhn/StationMetadata" target="_blank">A GitHub page</a> for the latest updates and feedback from you<br><br>
 						    
-						[Reference] - Please cite the article below if you feel this would be useful! It is currently accepted for publication in Journal of the Geological Society of Korea. You will be able to check out the paper online during March.
-						<li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2024). Station metadata integration of regional seismic networks in the southern Korean Peninsula. <i>Journal of the Geological Society of Korea</i>, <b>60</b>(1). (in Korean with English abstract) (in press).</li>
+						[Reference] - Please cite the article below if you feel this would be useful! 
+						<li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2024). Station metadata integration of regional seismic networks in the southern Korean Peninsula. <i>Journal of the Geological Society of Korea</i>, <b>60</b>(1). <a href="http://dx.doi.org/doi:10.14770/jgsk.2024.001" target="_blank">doi:10.14770/jgsk.2024.001</a> (in Korean with English abstract)</li>
                                             </li>
                                         </ul>
 									</section>
