--- a/KangTaeSeob_CV.html
+++ b/KangTaeSeob_CV.html
@@ -109,15 +109,16 @@
                                         2013-2020, Board Member, The Korea Society of Earth and Exploration Geophysicists<br>
                                         2014-2015/2020-2021, Board Member, The Geological Society of Korea<br>
                                         2014-2016/2018-2021, Head of Department, Department of Earth and Environmental Sciences, Pukyong National University<br>
-                                        2014-2016/2018-2022, Director, Institute of Environtal Geosciences, Pukyong National University<br>
+                                        2014-2016/2018-2022, Director, Institute of Environmental Geosciences, Pukyong National University<br>
                                         2014-2018, Advisory Board Member, Korea Meteorological Administration<br>
                                         2016-2017/2019-2021, Earthquake and Vocano Disaster Mitigation Advisory Committee, Ministry of the Interior and Safety(formerly, Ministry of Public Safety and Security)<br>
                                         2018-2021, Earthquake and Vocano Disaster Mitigation Policy Committee, Busan Metropolitan City<br>
                                         2018-2021, Review Board, National Research Foundation of Korea<br>
                                         2020-2021, The Pohang Earthquake Investigation Committee, The Prime Minister<br>
-                                        2020-2021, Advisory Committee, Korea Institute of Nuclea Safety<br>
-                                        2020-2026, Earthquake Disaster Investigation Committee, Ulsan Metropolitan City<br>
                                         2020-2023, Earthquake Advisory Committee, Pohang City<br>
+                                        2020-2025, Technical Standards Committee (5th, 6th), Korea Institute of Nuclea Safety<br>
+                                        2022-2025, Korea-China Basic Science Exchange Committee (13rd), National Research Foundation of Korea<br>
+                                        2020-2026, Earthquake Disaster Investigation Committee, Ulsan Metropolitan City<br>
                                     </section>
                             </div>
                         </div>
