--- a/KangTaeSeob_CV.html
+++ b/KangTaeSeob_CV.html
@@ -89,6 +89,8 @@
                                         2000-2001, Administrative Assistant, School of Earth and Environmental Sciences, Seoul National University<br>
                                         2004-2005, Senior Engineer, Division of Civil Engineering, KEPCO Engineering & Construction Company (KEPCO E&C)<br>
                                         2005-2009, Senior Researcher, Earthquake Research Center, Korea Institute of Geoscience and Mineral Resources (KIGAM)<br>
+					2022-2023, Visiting Professor, Department of Earth, Ocean and Atmospheric Sciences, University of British Columbia, Canada<br>
+					2023-2024, Professorial Research Fellow, Department of Meteorology and Geophysics, University of Vienna, Austria<br>
                                         2009-present, Professor, Department of Earth and Environmental Sciences, Pukyong National University<br>
                                     </section>
                             </div>
@@ -111,11 +113,13 @@
                                         2014-2016/2018-2021, Head of Department, Department of Earth and Environmental Sciences, Pukyong National University<br>
                                         2014-2016/2018-2022, Director, Institute of Environmental Geosciences, Pukyong National University<br>
                                         2014-2018, Advisory Board Member, Korea Meteorological Administration<br>
-                                        2016-2017/2019-2021, Earthquake and Volcano Disaster Mitigation Advisory Committee, Ministry of the Interior and Safety(formerly, Ministry of Public Safety and Security)<br>
+                                        2016-2017, Earthquake and Volcano Disaster Mitigation Advisory Committee, Ministry of Public Safety and Security<br>
                                         2018-2021, Earthquake and Volcano Disaster Mitigation Policy Committee, Busan Metropolitan City<br>
                                         2018-2021, Review Board, National Research Foundation of Korea<br>
                                         2020-2021, The Pohang Earthquake Investigation Committee, The Prime Minister<br>
                                         2020-2023, Earthquake Advisory Committee, Pohang City<br>
+					2019-2025, Earthquake Analysis Evaluation Committee, Korea Meteorological Administration<br>
+					2019-2025, Earthquake and Volcano Disaster Mitigation Advisory Committee, Ministry of the Interior and Safety<br>
                                         2020-2025, Technical Standards Committee (5th, 6th), Korea Institute of Nuclear Safety<br>
                                         2022-2025, Korea-China Basic Science Exchange Committee (13th), National Research Foundation of Korea<br>
                                         2020-2026, Earthquake Disaster Investigation Committee, Ulsan Metropolitan City<br>
@@ -137,7 +141,9 @@
                                         2006, Young Fellowship Award, Korea Institute of Geoscience and Mineral Resources<br>
                                         2016, Commendation of World Meteorological Day, The Prime Minister of the Korean Government<br>
                                         2017, Academic Award, The Korea Society of Earth and Exploration Geophysicists<br>
-                                        2019, Academic Award, The Geological Society of Korea
+                                        2019, Academic Award, The Geological Society of Korea<br>
+					2022, Commendation, Pohang City<br>
+					2023, Industry-Academic Cooperation Award, Pukyong National University
                                     </section>
                             </div>
                         </div>
