--- a/Article.html
+++ b/Article.html
@@ -82,7 +82,7 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Heo, D., Kang, T.-S., Kim, M., Ahn, B.S., Lim, H., Han, J., Kim, K.-H., Rhie, J., Kim, Y., Lee, J.-H. (2024). New insights on seismic activity in the southeastern Korean Peninsula from the Gyeongju Hi-density Broadband Seismic Network (GHBSN). <i>Geosciences Journal</i>, <b>**</b>(*), ***-***. <a href="https://doi.org/10.1007/s12303-024-0003-7" target="_blank">doi:10.1007/s12303-024-0003-7</a> (Published: 07 March 2024)
+                                            <li class="publication">Heo, D., Kang, T.-S., Kim, M., Ahn, B.S., Lim, H., Han, J., Kim, K.-H., Rhie, J., Kim, Y., Lee, J.-H. (2024). New insights on seismic activity in the southeastern Korean Peninsula from the Gyeongju Hi-density Broadband Seismic Network (GHBSN). <i>Geosciences Journal</i>. <a href="https://doi.org/10.1007/s12303-024-0003-7" target="_blank">doi:10.1007/s12303-024-0003-7</a> (Published: 07 March 2024)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
