--- a/Article.html
+++ b/Article.html
@@ -82,6 +82,10 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
+                                            <li class="publication">Heo, D., Ahn, B.S., Kim, K.-H., Rhie, J., Sohn, Y., Kang, T.-S. (2024). Spatial and temporal evolutions of aftershocks between 2017 and 2023 at the Pohang EGS site and its vicinity. <i>Episodes</i>. <a href="https://doi.org/10.18814/epiiugs/2024/02403s07" target="_blank">doi:10.18814/epiiugs/2024/02403s07</a>
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
                                             <li class="publication">Heo, D., Kang, T.-S., Kim, M., Ahn, B.S., Lim, H., Han, J., Kim, K.-H., Rhie, J., Kim, Y., Lee, J.-H. (2024). New insights on seismic activity in the southeastern Korean Peninsula from the Gyeongju Hi-density Broadband Seismic Network (GHBSN). <i>Geosciences Journal</i>, <b>28</b>(3), 319-333. <a href="https://doi.org/10.1007/s12303-024-0003-7" target="_blank">doi:10.1007/s12303-024-0003-7</a>
                                             </li>
                                         </ul>
