--- a/Article.html
+++ b/Article.html
@@ -82,7 +82,7 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Heo, D., Ahn, B.S., Kim, K.-H., Rhie, J., Sohn, Y., Kang, T.-S. (2024). Spatial and temporal evolutions of aftershocks between 2017 and 2023 at the Pohang EGS site and its vicinity. <i>Episodes</i>. <a href="https://doi.org/10.18814/epiiugs/2024/02403s07" target="_blank">doi:10.18814/epiiugs/2024/02403s07</a>
+                                            <li class="publication">Heo, D., Ahn, B.S., Kim, K.-H., Rhie, J., Sohn, Y., Kang, T.-S. (2024). Spatial and temporal evolutions of aftershocks between 2017 and 2023 at the Pohang EGS site and its vicinity. <i>Episodes</i>. (in press) <!-- <a href="https://doi.org/10.18814/epiiugs/2024/02403s07" target="_blank">doi:10.18814/epiiugs/2024/02403s07</a> -->
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
