--- a/SeismicNetwork.html
+++ b/SeismicNetwork.html
@@ -94,8 +94,8 @@
 
 						- <a href="https://github.com/ByeongSeokAhn/StationMetadata" target="_blank">A GitHub page</a> for the latest updates and feedback from you<br><br>
 						    
-						[Reference] - Please cite the article below if you feel this would be useful! 
-						<li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2024). Station metadata integration of regional seismic networks in the southern Korean Peninsula. <i>Journal of the Geological Society of Korea</i>, <b>60</b>(1). <a href="http://dx.doi.org/doi:10.14770/jgsk.2024.001" target="_blank">doi:10.14770/jgsk.2024.001</a> (in Korean with English abstract)</li>
+						[참고문헌] - 자료를 활용하는 경우, 아래 논문을 인용하여 주세요! 
+						<li class="publication">안병석, 강태섭, 정진오 (2024). 한반도 남부 광역 지진관측망의 관측소 색인 자료 통합. 지질학회지, <b>60</b>(1), 111–119. <a href="http://dx.doi.org/doi:10.14770/jgsk.2024.001" target="_blank">doi:10.14770/jgsk.2024.001</a> (in Korean with English abstract)</li>
                                             </li>
                                         </ul>
 									</section>
