--- a/Conference.html
+++ b/Conference.html
@@ -83,7 +83,10 @@
 										</header>
                                         <ul class="link-list last-child">
                                             <li class="publication">
-                                                Xiangyi An, Jin-Han Ree, Sungshil Kim, Dabin Heo, Kyungjoon Cho, Tae-Seob Kang, Kwang-Hee Kim, YoungHee Kim, Junkee Rhie (2022). Rupture propagation and arrest during 2016 Gyeongju earthquake sequence. 2022 추계지질과학연합학술대회, 창원컨벤션센터(CECO), 2022.10.25.-28.
+                                                Song, J.-H., Kim, S., Rhie, J., Kang, T.-S. (2024). Intraplate volcanism by spontaneous shallow upper mantle melt focusing. EGU General Assembly 2024, Vienna, Austria, 14–19 Apr 2024, EGU24-14365, https://doi.org/10.5194/egusphere-egu24-14365.
+                                            </li>
+                                            <li class="publication">
+                                                An, X., Ree, J.-H., Kim, S., Heo, D., Cho, K., Kang, T.-S., Kim, K.-H., Kim, Y., Rhie, J. (2022). Rupture propagation and arrest during 2016 Gyeongju earthquake sequence. 2022 추계지질과학연합학술대회, 창원컨벤션센터(CECO), 2022.10.25.-28.
                                             </li>
                                             <li class="publication">
                                                 안병석, 강태섭, 유현재 (2022). HVSR을 이용한 부지증폭함수 추정 및 지진동 부지증폭 보정. 2022 추계지질과학연합학술대회, 창원컨벤션센터(CECO), 2022.10.25.-28.
