--- a/Article.html
+++ b/Article.html
@@ -82,6 +82,10 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
+                                            <li class="publication">Han, Jae., Han, Jong., Heo, D., Kim, S., Lee, S., Koh, M.H., Kim, J., Kwon, K.B., Ahn, B.S., Jeon, Y., Jo, K., Lim, Y., Lee, S.-J., Kang, T.-S., Rhie, J., Ahn, U.S. (2024). Data and early results from temporary seismic arrays for monitoring and investigating magmatic processes beneath Mt. Halla and Ulleung Island volcanoes, South Korea. <i>Geosciences Journal</i>. (accepted)
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
                                             <li class="publication">Heo, D., Ahn, B.S., Kim, K.-H., Rhie, J., Sohn, Y., Kang, T.-S. (2024). Spatial and temporal evolutions of aftershocks between 2017 and 2023 at the Pohang EGS site and its vicinity. <i>Episodes</i>. (in press) <!-- <a href="https://doi.org/10.18814/epiiugs/2024/02403s07" target="_blank">doi:10.18814/epiiugs/2024/02403s07</a> -->
                                             </li>
                                         </ul>
