--- a/Article.html
+++ b/Article.html
@@ -86,7 +86,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Heo, D., Ahn, B.S., Kim, K.-H., Rhie, J., Sohn, Y., Kang, T.-S. (2024). Spatial and temporal evolutions of aftershocks between 2017 and 2023 at the Pohang EGS site and its vicinity. <i>Episodes</i>. (in press) <!-- <a href="https://doi.org/10.18814/epiiugs/2024/02403s07" target="_blank">doi:10.18814/epiiugs/2024/02403s07</a> -->
+                                            <li class="publication">Heo, D., Ahn, B.S., Kim, K.-H., Rhie, J., Sohn, Y., Kang, T.-S. (2024). Spatial and temporal evolutions of aftershocks between 2017 and 2023 at the Pohang EGS site and its vicinity. <i>Episodes</i>. <a href="https://doi.org/10.18814/epiiugs/2024/02403s07" target="_blank">doi:10.18814/epiiugs/2024/02403s07</a> (Online in June 1, 2024)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
