--- a/Media.html
+++ b/Media.html
@@ -83,6 +83,9 @@
 										</header>
                                         <ul class="link-list last-child">
                                             <li class="publication">
+                                                이데일리 기사, 2024.08.14. <a href="https://m.edaily.co.kr/News/Read?newsId=03142246638987320&mediaCodeNo=257" target="_blank">'난카이 대지진' 나면 한국에도.. "제주·남해 쓰나미"</a>
+                                            </li>
+                                            <li class="publication">
                                                 동아사이언스 기사, 2021.11.18. <a href="https://www.dongascience.com/news.php?idx=50632" target="_blank">원전 지진 안전성 평가하는 '소프트웨어' 개발</a>
                                             </li>
                                             <li class="publication">
