--- a/People.html
+++ b/People.html
@@ -157,7 +157,8 @@
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Minog&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Ph.D. Student</p>
                                                 <p>minog19(at)gmail.com<br>
-                                                Crustal structure from ray-traveltime forward modeling</p>
+                                                Crustal structure from ray-traveltime forward modeling<br>
+						Currently, visiting student at Australian National University (2024.02.–2025.02.)</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -184,19 +185,6 @@
                                                 <p>M.S. Student</p>
                                                 <p>donghyeop0619(at)gmail.com<br>
                                                 Rupture directivity</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
-                                                <img src="./images/people/jinohjung.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Jung, Jin Oh&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
-                                                <p>M.Ed. Student</p>
-                                                <p>jinojino0426(at)gmail.com<br>
-                                                Major in Earth Science Education, Earthquake analysis</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -259,7 +247,7 @@
                                             <li>
                                                 <img src="./images/people/satbyulkim.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Satbyul&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
-                                                <p>Postdoctoral Researcher</p>
+                                                <p>Researcher Professor</p>
                                                 <p>Korea University</p>
                                                 <p>Ph.D., Pukyong National University, 2020</p>
                                             </li>
@@ -272,8 +260,8 @@
                                             <li>
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Witek, Michael&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
-                                                <p>Postdoctoral Researcher</p>
-                                                <p>Korea University</p>
+                                                <p>Researcher</p>
+                                                <p>Los Alamos National Laboratory, USA</p>
                                                 <p>Fulbright U.S. Student Award to Korea (2014-2015)</p>
                                                 <p>Ph.D., Northwestern University, 2018</p>
                                             </li>
@@ -287,7 +275,7 @@
                                                 <img src="./images/people/seongjujeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Jeong, SeongJu&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
                                                 <p>Postdoctoral Researcher</p>
-                                                <p>University of Toronto, Mississauga</p>
+                                                <p>University of Toronto, Mississauga, Canada</p>
                                                 <p>M.S., Pukyong National University, 2013</p>
                                                 <p>Ph.D., Southern Methodist University, 2020</p>
                                             </li>
@@ -484,7 +472,8 @@
                                                 <img src="./images/people/joakwon.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kwon, Joa&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher</p>
-                                                <p>Korea Institute of Geoscience and Mineral Resources (KIGAM)</p>
+                                                <p>Korea Polar Research Institute</p>
+                                                <p>Formerly, Korea Institute of Geoscience and Mineral Resources</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -495,6 +484,8 @@
                                             <li>
                                                 <img src="./images/people/choiyujeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Choi, Yujeong&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                                <p>Officer</p>
+                                                <p>Korean Prosecution Service</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -504,9 +495,21 @@
                                         <ul class="people-list">
                                             <li>
                                                 <img src="./images/people/gibackkwon.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Kwon, Ki Baek&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                                <p style="line-height:2em; font-size:1.1em">Kwon, Ki Baek&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher</p>
                                                 <p>Korea Institute of Ocean Science and Technology (KIOST)</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/jinohjung.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Jung, Jin Oh&nbsp&nbsp<q style="font-size:12px">M.Ed.</q></p>
+                                                <p>Teacher</p>
+                                                <p>Gimcheon High School</p>
                                             </li>
                                         </ul>
                                     </section>
