--- a/People.html
+++ b/People.html
@@ -158,7 +158,7 @@
                                                 <p>Ph.D. Student</p>
                                                 <p>minog19(at)gmail.com<br>
                                                 Crustal structure from ray-traveltime forward modeling<br>
-						Currently, visiting student at Australian National University (2024.02.–2025.02.)</p>
+						Currently, visiting student at Australian National University</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -208,9 +208,10 @@
                                             <li>
                                                 <img src="./images/people/LeeHanByeol.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Lee, Han Byeol&nbsp&nbsp</p>
-                                                <p>M.S. Student; currently Research Trainee at KIGAM</p>
+                                                <p>M.S. Student</p>
                                                 <p>15lhstar@gmail.com<br>
-                                                Seismo-acoustic analysis</p>
+                                                Seismo-acoustic analysis<br>
+						Currently, Research Trainee at Korea Institute of Geoscience and Mineral Resources</p>
                                             </li>
                                         </ul>
                                     </section>
