--- a/Article.html
+++ b/Article.html
@@ -82,6 +82,10 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
+                                            <li class="publication">Kang, T.-S., Lee, H.B., Ahn, B.S. (2024). Comparison of seismic interferometry for surface wave extraction from traffic noise. <i>Journal of the Geological Society of Korea</i>. (in Korean with English abstract)(Accepted)
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
                                             <li class="publication">Han, Jaeseoung, Han, Jongwon, Heo, D., Kim, S., Lee, S., Koh, M.H., Kim, J., Kwon, K.B., Ahn, B.S., Jeon, Y., Jo, K., Lim, Y., Lee, S.-J., Kang, T.-S., Rhie, J., Ahn, U. (2024). Data and early results from temporary seismic arrays for monitoring and investigating magmatic processes beneath Mt. Halla and Ulleung Island volcanoes, South Korea. <i>Geosciences Journal</i>. <a href="https://doi.org/10.1007/s12303-024-0027-z" target="_blank">doi:10.1007/s12303-024-0027-z</a> (Online in July 10, 2024)
                                             </li>
                                         </ul>
