--- a/Article.html
+++ b/Article.html
@@ -82,7 +82,7 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Kang, T.-S., Lee, H.B., Ahn, B.S. (2024). Comparison of seismic interferometry for surface wave extraction from traffic noise. <i>Journal of the Geological Society of Korea</i>. (in Korean with English abstract)(Accepted)
+                                            <li class="publication">Kang, T.-S., Lee, H.B., Ahn, B.S. (2024). Comparison of seismic interferometry for surface wave extraction from traffic noise. <i>Journal of the Geological Society of Korea</i>, <b>60</b>(3), 261-274. <a href="http://dx.doi.org/doi:10.14770/jgsk.2024.024" target="_blank">doi:10.14770/jgsk.2024.024</a> (in Korean with English abstract)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
