--- a/Article.html
+++ b/Article.html
@@ -89,11 +89,11 @@
 					-->
 										
                                         <ul class="link-list last-child">
-                                            <li class="publication">Chang, C., Kang, T.-S., Heo, D. (2025). Identification of seismogenic fault network using earthquake focal mechanisms and stress constraints: A case of the 2016 Gyeongju earthquake sequence, South Korea. <i>Tectonophysics</i>. (Accepted on December 30, 2024)
+                                            <li class="publication">Cho, H., Lee, S.-J., Kim, S., Rhie, J., Kang, T.-S. (2025). Imaging the 3D basin structure of the Santa Clara Valley by ambient noise tomography. <i>Geosciences Journal</i>. (Accepted on August 30, 2024)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Cho, H., Lee, S.-J., Kim, S., Rhie, J., Kang, T.-S. (2025). Imaging the 3D basin structure of the Santa Clara Valley by ambient noise tomography. <i>Geosciences Journal</i>. (Accepted on August 30, 2024)
+                                            <li class="publication">Chang, C., Kang, T.-S., Heo, D. (2025). Identification of seismogenic fault network using earthquake focal mechanisms and stress constraints: A case of the 2016 Gyeongju earthquake sequence, South Korea. <i>Tectonophysics</i>. <a href="https://doi.org/10.1016/j.tecto.2024.230613" target="_blank">doi:10.1016/j.tecto.2024.230613</a> (Available online on January 3, 2025)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
