--- a/Article.html
+++ b/Article.html
@@ -93,7 +93,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Chang, C., Kang, T.-S., Heo, D. (2025). Identification of seismogenic fault network using earthquake focal mechanisms and stress constraints: A case of the 2016 Gyeongju earthquake sequence, South Korea. <i>Tectonophysics</i>. <a href="https://doi.org/10.1016/j.tecto.2024.230613" target="_blank">doi:10.1016/j.tecto.2024.230613</a> (Available online on January 3, 2025)
+                                            <li class="publication">Chang, C., Kang, T.-S., Heo, D. (2025). Identification of seismogenic fault network using earthquake focal mechanisms and stress constraints: A case of the 2016 Gyeongju earthquake sequence, South Korea. <i>Tectonophysics</i>, <b>897</b>, 230613. <a href="https://doi.org/10.1016/j.tecto.2024.230613" target="_blank">doi:10.1016/j.tecto.2024.230613</a> (Available online on January 3, 2025; print on February 20, 2025)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
