--- a/Article.html
+++ b/Article.html
@@ -81,13 +81,6 @@
 											<h2>Article</h2>
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
-                                        <!-- 
-					<ul class="link-list last-child">
-                                            <li class="publication">Ahn, B.S., Kang, T.-S., Yoo, H.J. (2025). Source parameter estimation using site-corrected source spectra for the 2019 Ridgecrest earthquake sequence in Southern California. <i>Bulletin of the Seismological Society of America</i>. (Accepted on January **, 2025)
-                                            </li>
-                                        </ul>
-					-->
-										
                                         <ul class="link-list last-child">
                                             <li class="publication">Cho, H., Lee, S.-J., Kim, S., Rhie, J., Kang, T.-S. (2025). Imaging the 3D basin structure of the Santa Clara Valley by ambient noise tomography. <i>Geosciences Journal</i>. (Accepted on August 30, 2024)
                                             </li>
@@ -97,7 +90,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Chang, C., Kang, T.-S., Heo, D. (2025). Identification of seismogenic fault network using earthquake focal mechanisms and stress constraints: A case of the 2016 Gyeongju earthquake sequence, South Korea. <i>Tectonophysics</i>, <b>897</b>, 230613. <a href="https://doi.org/10.1016/j.tecto.2024.230613" target="_blank">doi:10.1016/j.tecto.2024.230613</a> (Available online on January 3, 2025; print on February 20, 2025)
+                                            <li class="publication">Chang, C., Kang, T.-S., Heo, D. (2025). Identification of seismogenic fault network using earthquake focal mechanisms and stress constraints: A case of the 2016 Gyeongju earthquake sequence, South Korea. <i>Tectonophysics</i>, <b>897</b>:230613. <a href="https://doi.org/10.1016/j.tecto.2024.230613" target="_blank">doi:10.1016/j.tecto.2024.230613</a> (Available online on January 3, 2025; print on February 20, 2025)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
