--- a/Article.html
+++ b/Article.html
@@ -86,7 +86,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Ahn, B.S., Kang, T.-S., Yoo, H.J. (2025). Source parameter estimation using site-corrected source spectra for the 2019 Ridgecrest earthquake sequence in Southern California. <i>Bulletin of the Seismological Society of America</i>. (Accepted on January 10, 2025)
+                                            <li class="publication">Ahn, B.S., Kang, T.-S., Yoo, H.J. (2025). Source parameter estimation using site-corrected source spectra for the 2019 Ridgecrest earthquake sequence in Southern California. <i>Bulletin of the Seismological Society of America</i>, <b>XXX</b>(XX), XXXX–XXXX. <a href="https://doi.org/10.1785/0120240157" target="_blank">doi:10.1785/0120240157</a> (Accepted on January 10, 2025; in press)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
