--- a/KangTaeSeob_CV.html
+++ b/KangTaeSeob_CV.html
@@ -110,8 +110,8 @@
                                         2011-2013, Board Member, The Earthquake Engineering Society of Korea<br>
                                         2011-2020, Board Member, The Korea Society of Earth and Exploration Geophysicists<br>
                                         2014-2015/2020-2021, Board Member, The Geological Society of Korea<br>
-                                        2014-2016/2018-2021, Head of Department, Department of Earth and Environmental Sciences, Pukyong National University<br>
-                                        2014-2016/2018-2022, Director, Institute of Environmental Geosciences, Pukyong National University<br>
+                                        2014-2016/2018-2021/2024-2025, Head of Department, Department of Earth and Environmental Sciences, Pukyong National University<br>
+                                        2014-2016/2018-2022/2024-2025, Director, Institute of Environmental Geosciences, Pukyong National University<br>
                                         2014-2018, Advisory Board Member, Korea Meteorological Administration<br>
                                         2016-2017, Earthquake and Volcano Disaster Mitigation Advisory Committee, Ministry of Public Safety and Security<br>
                                         2018-2021, Earthquake and Volcano Disaster Mitigation Policy Committee, Busan Metropolitan City<br>
@@ -119,10 +119,10 @@
                                         2020-2021, The Pohang Earthquake Investigation Committee, The Prime Minister<br>
                                         2020-2023, Earthquake Advisory Committee, Pohang City<br>
 					2019-2025, Earthquake Analysis Evaluation Committee, Korea Meteorological Administration<br>
-					2019-2025, Earthquake and Volcano Disaster Mitigation Advisory Committee, Ministry of the Interior and Safety<br>
                                         2020-2025, Technical Standards Committee (5th, 6th), Korea Institute of Nuclear Safety<br>
-                                        2022-2025, Korea-China Basic Science Exchange Committee (13th), National Research Foundation of Korea<br>
                                         2020-2026, Earthquake Disaster Investigation Committee, Ulsan Metropolitan City<br>
+					2019-2027, Earthquake and Volcano Disaster Mitigation Advisory Committee, Ministry of the Interior and Safety<br>
+                                        2022-2028, Korea-China Basic Science Exchange Committee (13th, 14th), National Research Foundation of Korea<br>
                                     </section>
                             </div>
                         </div>
