--- a/People.html
+++ b/People.html
@@ -85,7 +85,7 @@
                                         </header>
                                     </section>
                             </div>
-                            <div class="col-12"  style="margin: -20px 0 0px 0;">
+<!--                            <div class="col-12"  style="margin: -20px 0 0px 0;">
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
@@ -94,6 +94,46 @@
                                                 <p>Seismologist</p>
                                                 <p>yoonow(at)gmail.com<br>
                                                 Seismotectonics of Antarctica; Seismic hazard in the Korean Peninsula</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+-->
+                            <div class="col-6 col-12-medium"  style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/hyunjaeyoo.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Yoo, Hyun Jae&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
+                                                <p>Seismologist</p>
+                                                <p>yoonow(at)gmail.com<br>
+                                                Seismotectonics of Antarctica; Seismic hazard in the Korean Peninsula</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/dabeenheo.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Heo, Dabeen&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
+                                                <p>Seismologist</p>
+                                                <p>hdb4812(at)gmail.com<br>
+                                                Seismotectonics of the Korean Peninsula, Seismic network management, Seismic waveform modeling</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/parksuhee.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Park, Suhee&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
+                                                <p>Seismologist</p>
+                                                <p>suhee2308(at)gmail.com<br>
+                                                Automatic detection, association, and location of earthquakes</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -121,19 +161,6 @@
                                         <header>
                                             <h3>Students</h3>
                                         </header>
-                                    </section>
-                            </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
-                                                <img src="./images/people/dabeenheo.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Heo, Dabeen&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Ph.D. Student</p>
-                                                <p>hdb4812(at)gmail.com<br>
-                                                Seismic waveform modeling, Seismic network management</p>
-                                            </li>
-                                        </ul>
                                     </section>
                             </div>
                             <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
@@ -185,19 +212,6 @@
                                                 <p>M.S. Student</p>
                                                 <p>donghyeop0619(at)gmail.com<br>
                                                 Rupture directivity</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
-                                                <img src="./images/people/parksuhee.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Park, Suhee&nbsp&nbsp</p>
-                                                <p>M.S. Student</p>
-                                                <p>suhee2308(at)gmail.com<br>
-                                                Automatic detection, association, and location of earthquakes</p>
                                             </li>
                                         </ul>
                                     </section>
